src/test/ui/borrowck/borrowck-thread-local-static-borrow-outlives-fn.ast.stderr
error[E0597]: borrowed value does not live long enough
  --> $DIR/borrowck-thread-local-static-borrow-outlives-fn.rs:11:21
   |
LL |      assert_static(&FOO);
   |                     ^^^ - borrowed value only lives until here
   |                     |
   |                     borrowed value does not live long enough
   |
   = note: borrowed value must be valid for the static lifetime...

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
